--- a/packages/scm/package.json
+++ b/packages/scm/package.json
@@ -11,7 +11,7 @@
     "@types/diff": "^5.2.1",
     "diff": "^5.2.0",
     "p-debounce": "^2.1.0",
-    "react-autosize-textarea": "^7.0.0",
+    "react-textarea-autosize": "^8.5.5",
     "ts-md5": "^1.2.2",
     "tslib": "^2.6.2"
   },
