--- a/sample-plugins/sample-namespace/plugin-gotd/package.json
+++ b/sample-plugins/sample-namespace/plugin-gotd/package.json
@@ -18,8 +18,7 @@
     "@theia/api-provider-sample": "1.57.0"
   },
   "scripts": {
-    "prepare": "yarn -s package",
-    "package": "yarn pack"
+    "build": "npm pack"
   },
   "theiaPlugin": {
     "headless": "headless"
