--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -42,10 +42,10 @@ jobs:
       - name: Build Browser
         shell: bash
         run: |
-          yarn global add node-gyp
-          yarn --skip-integrity-check --network-timeout 100000
-          yarn download:plugins
-          yarn browser build
+          npm install -g node-gyp
+          npm ci
+          npm run build:browser
+          npm run download:plugins
         env:
           NODE_OPTIONS: --max_old_space_size=4096
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
@@ -53,11 +53,11 @@ jobs:
       - name: Build Playwright
         shell: bash
         run: |
-          yarn --cwd examples/playwright build
+          cd examples/playwright && npm run build
 
       - name: Test (playwright)
         shell: bash
-        run: yarn --cwd examples/playwright ui-tests-ci
+        run: cd examples/playwright && npm run ui-tests-ci
 
       - name: Archive test results
         uses: actions/upload-artifact@50769540e7f4bd5e21e526ee35c689e35e0d6874 #v4
