--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -38,8 +38,9 @@ jobs:
       - name: Install
         shell: bash
         run: |
-          yarn global add node-gyp
-          yarn --skip-integrity-check --network-timeout 100000
+          npm install -g node-gyp
+          npm ci
+          npm run build
         env:
           NODE_OPTIONS: --max_old_space_size=4096
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
@@ -47,8 +48,8 @@ jobs:
       - name: Publish NPM
         shell: bash
         run: |
-          yarn publish:latest -- ${{ inputs.release_type }}
-          yarn publish:check
+          npm run publish:latest -- ${{ inputs.release_type }}
+          npm run publish:check
         env:
           NPM_CONFIG_PROVENANCE: "true" # enable provenance check
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
