--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -89,21 +89,21 @@
   },
   "scripts": {
     "clean": "theia clean",
-    "build": "yarn -s compile && yarn -s bundle",
-    "build:production": "yarn -s compile && yarn -s bundle:production",
-    "bundle": "yarn rebuild && theia build --mode development",
-    "bundle:production": "yarn rebuild && theia build --mode production",
+    "build": "theiaext build && npm run -s bundle",
+    "build:production": "theiaext build && npm run -s bundle:production",
+    "bundle": "npm run rebuild && theia build --mode development",
+    "bundle:production": "npm run rebuild && theia build --mode production",
     "compile": "tsc -b",
-    "coverage": "yarn -s test --test-coverage && yarn -s coverage:report",
+    "coverage": "npm run -s test --test-coverage && npm run -s coverage:report",
     "coverage:clean": "rimraf .nyc_output && rimraf coverage",
     "coverage:report": "nyc report --reporter=html",
     "rebuild": "theia rebuild:browser --cacheRoot ../..",
     "start": "theia start --plugins=local-dir:../../plugins --ovsx-router-config=../ovsx-router-config.json",
-    "start:debug": "yarn -s start --log-level=debug",
-    "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
+    "start:debug": "npm run -s start --log-level=debug",
+    "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"npm run -s watch:bundle\" \"npm run -s start\"",
     "test": "theia test . --plugins=local-dir:../../plugins --test-spec=../api-tests/**/*.spec.js",
-    "test:debug": "yarn -s test --test-inspect",
-    "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
+    "test:debug": "npm run -s test --test-inspect",
+    "watch": "concurrently --kill-others -n tsc,bundle -c red,yellow \"tsc -b -w --preserveWatchOutput\" \"npm run -s watch:bundle\"",
     "watch:bundle": "theia build --watch --mode development",
     "watch:compile": "tsc -b -w"
   },
