--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -91,17 +91,17 @@
     "@theia/workspace": "1.57.0"
   },
   "scripts": {
-    "build": "yarn -s compile && yarn -s bundle",
-    "bundle": "yarn rebuild && theia build --mode development",
+    "build": "theiaext build && npm run -s bundle",
+    "bundle": "npm run rebuild && theia build --mode development",
     "clean": "theia clean",
     "compile": "tsc -b",
     "lint": "theiaext lint",
     "rebuild": "theia rebuild:electron --cacheRoot ../..",
     "start": "theia start --plugins=local-dir:../../plugins --ovsx-router-config=../ovsx-router-config.json",
-    "start:debug": "yarn -s start --log-level=debug --remote-debugging-port=9222",
-    "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\" \"yarn -s start\"",
+    "start:debug": "npm run -s start --log-level=debug --remote-debugging-port=9222",
+    "start:watch": "concurrently --kill-others -n tsc,bundle,run -c red,yellow,green \"tsc -b -w --preserveWatchOutput\" \"npm run -s watch:bundle\" \"npm run -s start\"",
     "test": "electron-mocha --timeout 60000 \"./lib/test/**/*.espec.js\"",
-    "watch": "concurrently --kill-others -n tsc,bundle -c red,blue \"tsc -b -w --preserveWatchOutput\" \"yarn -s watch:bundle\"",
+    "watch": "concurrently --kill-others -n tsc,bundle -c red,blue \"tsc -b -w --preserveWatchOutput\" \"npm run -s watch:bundle\"",
     "watch:bundle": "theia build --watch --mode development",
     "watch:compile": "tsc -b -w"
   },
