--- a/examples/playwright/package.json
+++ b/examples/playwright/package.json
@@ -12,19 +12,19 @@
   },
   "homepage": "https://github.com/eclipse-theia/theia",
   "scripts": {
-    "clean": "rimraf lib *.tsbuildinfo .eslintcache",
-    "build": "yarn && yarn clean && tsc --incremental && yarn lint && yarn playwright:install",
-    "watch": "tsc -w --incremental",
-    "theia:start": "rimraf .tmp.cfg && cross-env THEIA_CONFIG_DIR=$PWD/.tmp.cfg yarn --cwd ../browser start",
+    "clean": "theiaext clean",
+    "build": "theiaext build && npm run playwright:install",
+    "watch": "theiaext watch",
+    "theia:start": "rimraf .tmp.cfg && cd ../browser && cross-env THEIA_CONFIG_DIR=$PWD/.tmp.cfg npm run start",
     "lint": "eslint -c ./.eslintrc.js --ext .ts ./src",
     "lint:fix": "eslint -c ./.eslintrc.js --ext .ts ./src --fix",
     "playwright:install": "playwright install chromium",
-    "ui-tests": "yarn build && playwright test --config=./configs/playwright.config.ts",
-    "ui-tests-electron": "yarn build && cross-env USE_ELECTRON=true playwright test --config=./configs/playwright.config.ts",
-    "ui-tests-ci": "yarn build && playwright test --config=./configs/playwright.ci.config.ts",
-    "ui-tests-headful": "yarn build && playwright test --config=./configs/playwright.headful.config.ts",
+    "ui-tests": "npm run build && playwright test --config=./configs/playwright.config.ts",
+    "ui-tests-electron": "npm run build && cross-env USE_ELECTRON=true playwright test --config=./configs/playwright.config.ts",
+    "ui-tests-ci": "npm run build && playwright test --config=./configs/playwright.ci.config.ts",
+    "ui-tests-headful": "npm run build && playwright test --config=./configs/playwright.headful.config.ts",
     "ui-tests-report-generate": "allure generate ./allure-results --clean -o allure-results/allure-report",
-    "ui-tests-report": "yarn ui-tests-report-generate && allure open allure-results/allure-report"
+    "ui-tests-report": "npm run ui-tests-report-generate && allure open allure-results/allure-report"
   },
   "files": [
     "lib",
@@ -35,6 +35,7 @@
     "fs-extra": "^9.0.8"
   },
   "devDependencies": {
+    "@theia/cli": "1.55.0",
     "@types/fs-extra": "^9.0.8",
     "allure-commandline": "^2.23.1",
     "allure-playwright": "^2.5.0",
