--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -64,7 +64,7 @@
     "react-dom": "^18.2.0",
     "react-tooltip": "^4.2.21",
     "react-virtuoso": "^2.17.0",
-    "reflect-metadata": "^0.1.10",
+    "reflect-metadata": "^0.2.2",
     "route-parser": "^0.0.5",
     "safer-buffer": "^2.1.2",
     "socket.io": "^4.5.3",
@@ -201,12 +201,12 @@
     "clean": "theiaext clean",
     "compile": "theiaext compile",
     "generate-layout": "electron ./scripts/generate-layout",
+    "afterInstall": "npm run generate-theia-re-exports && npm run download:json-schema",
     "generate-theia-re-exports": "theia-re-exports generate && theia-re-exports template README_TEMPLATE.md > README.md",
     "lint": "theiaext lint",
-    "prepare": "yarn -s generate-theia-re-exports && yarn download:json-schema",
     "download:json-schema": "node ./scripts/download-catalog.js",
     "test": "theiaext test",
-    "version": "yarn -s generate-theia-re-exports",
+    "version": "npm run -s generate-theia-re-exports",
     "watch": "theiaext watch"
   },
   "devDependencies": {
