--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -8,7 +8,6 @@
     "@theia/mini-browser": "1.57.0",
     "@theia/monaco": "1.57.0",
     "@types/highlight.js": "^10.1.0",
-    "@types/markdown-it-anchor": "^4.0.1",
     "highlight.js": "10.4.1",
     "markdown-it-anchor": "~5.0.0",
     "tslib": "^2.6.2"
@@ -46,7 +45,8 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.57.0"
+    "@theia/ext-scripts": "1.57.0",
+    "@types/markdown-it-anchor": "^4.0.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
