Fix Set Milestone on PR Workflow
Previously, PRs from forks were not assigned to a milestone due to using the `pull_request` trigger. This trigger runs in the context of the merge commit and cannot access the `GITHUB_TOKEN` for forks. Switching to the `pull_request_target` event allows access from the base context, enabling milestone assignment for forked PRs.

For more information, see the [GitHub documentation](https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#pull_request_target).

--- a/.github/workflows/set-milestone-on-pr.yml
+++ b/.github/workflows/set-milestone-on-pr.yml
@@ -15,7 +15,7 @@
 # Set milestone on each pull request by using the next minor version
 # next version is computed using npm version tool
 on:
-  pull_request:
+  pull_request_target:
     branches: [master]
     types: [closed]
 
