--- a/packages/ai-code-completion/package.json
+++ b/packages/ai-code-completion/package.json
@@ -10,7 +10,8 @@
     "@theia/output": "1.55.0",
     "@theia/workspace": "1.55.0",
     "minimatch": "^5.1.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "js-yaml": "^4.1.0"
   },
   "main": "lib/common",
   "publishConfig": {
