--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -2,16 +2,17 @@ name: Publish GitHub Pages
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Specify the version number for documentation"
+        required: true
+        default: "latest"
 
 jobs:
   publish:
-    name: Publish to NPM and GitHub pages
+    name: Publish GitHub pages
     needs: build
     runs-on: ubuntu-22.04
-
-    # The current approach is silly. We should be smarter and use `actions/upload-artifact` and `actions/download-artifact` instead of rebuilding
-    # everything from scratch again. (git checkout, Node.js install, yarn, etc.) It was not possible to share artifacts on Travis CI without an
-    # external storage (such as S3), so we did rebuild everything before the npm publish. We should overcome this limitation with GH Actions.
 
     steps:
       - name: Checkout
@@ -22,43 +23,25 @@ jobs:
       - name: Use Node.js 20.x
         uses: actions/setup-node@1a4442cacd436585916779262731d5b162bc6ec7 # v3.8.2
         with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "20.x"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Use Python 3.x
         uses: actions/setup-python@b64ffcaf5b410884ad320a9cfac8866006a109aa # v4.8.0
         with:
-          python-version: '3.x'
-
-      - name: Pre-npm-Publish
-        run: |
-          yarn global add node-gyp
-          yarn --skip-integrity-check --network-timeout 100000
-        env:
-          NODE_OPTIONS: --max_old_space_size=4096
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
+          python-version: "3.x"
 
       - name: Pre-docs-Publish
         run: |
+          yarn --skip-integrity-check --network-timeout 100000
           yarn docs
         env:
-          NODE_OPTIONS: --max_old_space_size=9216
+          NODE_OPTIONS: --max_old_space_size=14336
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # https://github.com/microsoft/vscode-ripgrep/issues/9
 
       - name: Publish GH Pages
         uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847 # v3.9.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./gh-pages
-          force_orphan: true    # will only keep latest commit on branch gh-pages
-
-      - name: Publish NPM
-        uses: nick-fields/retry@14672906e672a08bd6eeb15720e9ed3ce869cdd4 # v2.9.0
-        with:
-          timeout_minutes: 5
-          retry_wait_seconds: 30
-          max_attempts: 3
-          retry_on: error
-          command: yarn publish:next
-          on_retry_command: git reset --hard
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # The variable name comes from here: https://github.com/actions/setup-node/blob/70b9252472eee7495c93bb1588261539c3c2b98d/src/authutil.ts#L48
+          force_orphan: true # will only keep latest commit on branch gh-pages
