--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "sinon": "^12.0.0",
     "temp": "^0.9.1",
     "tslint": "^5.12.0",
-    "typedoc": "^0.22.11",
-    "typedoc-plugin-external-module-map": "1.3.2",
+    "typedoc": "0.25.13",
+    "typedoc-plugin-external-module-map": "2.0.1",
     "typescript": "~5.4.5",
     "yargs": "^15.3.1"
   },
@@ -68,7 +68,7 @@
     "compile:clean": "ts-clean dev-packages/* packages/*",
     "compile:references": "node scripts/compile-references.js",
     "compile:tsc": "tsc -b",
-    "docs": "rimraf gh-pages/docs/next && typedoc --tsconfig tsconfig.json --options configs/typedoc.json .",
+    "docs": "rimraf gh-pages/docs/next && typedoc --tsconfig tsconfig.json --plugin typedoc-plugin-external-module-map --options configs/typedoc.json .",
     "download:plugins": "theia download:plugins",
     "electron": "yarn -s --cwd examples/electron",
     "license:check": "node scripts/check_3pp_licenses.js",
