--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -9,6 +9,9 @@
       "path": "../../dev-packages/cli"
     },
     {
+      "path": "../../packages/ai-anthropic"
+    },
+    {
       "path": "../../packages/ai-chat"
     },
     {
