--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,10 @@
     "editor.defaultFormatter": "vscode.typescript-language-features",
     "typescript.preferences.quoteStyle": "single",
     "editor.tabSize": 4,
-  }
+  },
+  "markdownlint.config": {
+    "MD032": false, // don't require blank line around lists 
+    "MD033": false, // allow inline html
+    "MD041": false // don't require h1 in first line
+  },
 }
