Add Hugging Face Provider to Electron example
fixed #14569

Signed-off-by: Jonas Helming <jhelming@eclipsesource.com>

--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -31,6 +31,7 @@
     "@theia/ai-code-completion": "1.56.0",
     "@theia/ai-core": "1.56.0",
     "@theia/ai-history": "1.56.0",
+    "@theia/ai-huggingface": "1.56.0",
     "@theia/ai-llamafile": "1.56.0",
     "@theia/ai-ollama": "1.56.0",
     "@theia/ai-openai": "1.56.0",
