--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,6 +76,9 @@
       "path": "packages/ai-llamafile"
     },
     {
+      "path": "packages/ai-mcp"
+    },
+    {
       "path": "packages/ai-ollama"
     },
     {
