--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -30,6 +30,9 @@
       "path": "../../packages/ai-llamafile"
     },
     {
+      "path": "../../packages/ai-mcp"
+    },
+    {
       "path": "../../packages/ai-ollama"
     },
     {
