Remote: still use settings and configuration from the local user dir (#14548)
* Remote: still use settings and configuration from the local user dir

---------

Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@theia/core": "1.56.0",
     "@theia/filesystem": "1.56.0",
+    "@theia/userstorage": "1.56.0",
     "archiver": "^5.3.1",
     "decompress": "^4.2.1",
     "decompress-tar": "^4.0.0",
