Pin perfect-scrollbar to 1.5.5
Fixes  #14586

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -13,6 +13,10 @@
     "react-perfect-scrollbar": "^1.5.8",
     "tslib": "^2.6.2"
   },
+
+  "resolutions": {
+    "perfect-scrollbar": "1.5.5"
+  },
   "publishConfig": {
     "access": "public"
   },
