--- a/packages/messages/package.json
+++ b/packages/messages/package.json
@@ -8,6 +8,9 @@
     "ts-md5": "^1.2.2",
     "tslib": "^2.6.2"
   },
+  "resolutions": {
+    "perfect-scrollbar": "1.5.5"
+  },
   "publishConfig": {
     "access": "public"
   },
