Add initial support for MCP (#14598)
* Add initial support for MCP

fixed #14523

Signed-off-by: Jonas Helming <jhelming@eclipsesource.com>
Co-authored-by: Stefan Dirix <sdirix@eclipsesource.com>

--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -33,6 +33,9 @@
       "path": "../../packages/ai-llamafile"
     },
     {
+      "path": "../../packages/ai-mcp"
+    },
+    {
       "path": "../../packages/ai-ollama"
     },
     {
