Add anthropic and mcp to electron example
fixed #14626

Signed-off-by: Jonas Helming <jhelming@eclipsesource.com>

--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -12,6 +12,9 @@
       "path": "../../dev-packages/cli"
     },
     {
+      "path": "../../packages/ai-anthropic"
+    },
+    {
       "path": "../../packages/ai-chat"
     },
     {
@@ -31,6 +34,9 @@
     },
     {
       "path": "../../packages/ai-llamafile"
+    },
+    {
+      "path": "../../packages/ai-mcp"
     },
     {
       "path": "../../packages/ai-ollama"
