feat: Integrate SCANOSS
Adds SCANOSS integration in Theia, supporting AI-driven code snippet
scanning for open-source and security compliance.

Adds new @theia/scanoss and @theia/ai-scanoss packages to support
SCANOSS integration.

- Provides SCANOSS service for content scanning.
- Introduces preferences for API key configuration and automatic
  scanning options.
- Integrates SCANOSS action into AI Chat UI as part of the code response
  renderer
- Displays detailed match results with links and additional information.

Also:
- Adds a pluggable CodePartRendererAction interface for contributing
  actions to code parts in AI responses.
- Adapts code base for updated dependencies where required.

--- a/examples/browser-only/package.json
+++ b/examples/browser-only/package.json
@@ -22,6 +22,7 @@
     "@theia/ai-history": "1.56.0",
     "@theia/ai-ollama": "1.56.0",
     "@theia/ai-openai": "1.56.0",
+    "@theia/ai-scanoss": "1.56.0",
     "@theia/api-samples": "1.56.0",
     "@theia/bulk-edit": "1.56.0",
     "@theia/callhierarchy": "1.56.0",
@@ -53,6 +54,7 @@
     "@theia/preview": "1.56.0",
     "@theia/process": "1.56.0",
     "@theia/property-view": "1.56.0",
+    "@theia/scanoss": "1.56.0",
     "@theia/scm": "1.56.0",
     "@theia/scm-extra": "1.56.0",
     "@theia/search-in-workspace": "1.56.0",
