--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -42,6 +42,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-scanoss"
+    },
+    {
       "path": "../../packages/ai-terminal"
     },
     {
@@ -145,6 +148,9 @@
     },
     {
       "path": "../../packages/remote"
+    },
+    {
+      "path": "../../packages/scanoss"
     },
     {
       "path": "../../packages/scm"
