--- a/tsconfig.json
+++ b/tsconfig.json
@@ -88,6 +88,9 @@
       "path": "packages/ai-openai"
     },
     {
+      "path": "packages/ai-scanoss"
+    },
+    {
       "path": "packages/ai-terminal"
     },
     {
@@ -200,6 +203,9 @@
     },
     {
       "path": "packages/remote"
+    },
+    {
+      "path": "packages/scanoss"
     },
     {
       "path": "packages/scm"
