--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -35,6 +35,7 @@
     "@theia/ai-llamafile": "1.56.0",
     "@theia/ai-ollama": "1.56.0",
     "@theia/ai-openai": "1.56.0",
+    "@theia/ai-scanoss": "1.56.0",
     "@theia/ai-terminal": "1.56.0",
     "@theia/ai-workspace-agent": "1.56.0",
     "@theia/api-provider-sample": "1.56.0",
@@ -72,6 +73,7 @@
     "@theia/process": "1.56.0",
     "@theia/property-view": "1.56.0",
     "@theia/remote": "1.56.0",
+    "@theia/scanoss": "1.56.0",
     "@theia/scm": "1.56.0",
     "@theia/scm-extra": "1.56.0",
     "@theia/search-in-workspace": "1.56.0",
