--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -39,6 +39,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-scanoss"
+    },
+    {
       "path": "../../packages/ai-terminal"
     },
     {
@@ -139,6 +142,9 @@
     },
     {
       "path": "../../packages/remote"
+    },
+    {
+      "path": "../../packages/scanoss"
     },
     {
       "path": "../../packages/scm"
