--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -1,12 +1,15 @@
 name: Publish GitHub Pages
 
+permissions:
+  id-token: write
+  contents: write
+
 on:
   workflow_dispatch:
 
 jobs:
   publish:
     name: Publish to NPM and GitHub pages
-    needs: build
     runs-on: ubuntu-22.04
 
     # The current approach is silly. We should be smarter and use `actions/upload-artifact` and `actions/download-artifact` instead of rebuilding
@@ -22,13 +25,13 @@ jobs:
       - name: Use Node.js 20.x
         uses: actions/setup-node@1a4442cacd436585916779262731d5b162bc6ec7 # v3.8.2
         with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: "20.x"
+          registry-url: "https://registry.npmjs.org"
 
-      - name: Use Python 3.x
+      - name: Use Python 3.11
         uses: actions/setup-python@b64ffcaf5b410884ad320a9cfac8866006a109aa # v4.8.0
         with:
-          python-version: '3.x'
+          python-version: "3.11"
 
       - name: Pre-npm-Publish
         run: |
@@ -42,14 +45,14 @@ jobs:
         run: |
           yarn docs
         env:
-          NODE_OPTIONS: --max_old_space_size=9216
+          NODE_OPTIONS: --max_old_space_size=14336
 
       - name: Publish GH Pages
         uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847 # v3.9.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./gh-pages
-          force_orphan: true    # will only keep latest commit on branch gh-pages
+          force_orphan: true # will only keep latest commit on branch gh-pages
 
       - name: Publish NPM
         uses: nick-fields/retry@14672906e672a08bd6eeb15720e9ed3ce869cdd4 # v2.9.0
@@ -61,4 +64,5 @@ jobs:
           command: yarn publish:next
           on_retry_command: git reset --hard
         env:
+          NPM_CONFIG_PROVENANCE: "true"
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # The variable name comes from here: https://github.com/actions/setup-node/blob/70b9252472eee7495c93bb1588261539c3c2b98d/src/authutil.ts#L48
