Address review comments
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/package.json
+++ b/package.json
@@ -81,7 +81,9 @@
     "publish:check": "node scripts/check-publish.js",
     "rebuild:clean": "rimraf .browser_modules",
     "rebuild:browser": "cd examples/browser && npm run rebuild",
+    "rebuild:electron": "cd examples/electron && npm run rebuild",
     "start:browser": "cd examples/browser && npm run start",
+    "start:browser-only": "cd examples/browser-only && npm run start",
     "start:electron": "cd examples/electron && npm run start",
     "test": "npm run -s test:theia && npm run -s electron test && npm run -s browser test",
     "test:browser": "cd examples/browser && npm run test",
@@ -89,6 +91,9 @@
     "test:theia": "lerna run --scope \"@theia/!(example-)*\" test --stream --concurrency=1",
     "test:playwright": "cd examples/playwright && npm run -s ui-tests",
     "version": "lerna run version",
+    "watch:browser": "cd examples/browser && npm run -s watch",
+    "watch:electron": "cd examples/electron && npm run -s watch",
+    "watch": "concurrently --kill-others \"npm run -s watch:browser\" \"npm run -s watch:electron\"",
     "performance:startup": "npm run -s performance:startup:browser && npm run -s performance:startup:electron",
     "performance:startup:browser": "concurrently --success first -k -r \"cd scripts/performance && node browser-performance.js --name 'Browser Frontend Startup' --folder browser --runs 10\" \"npm run -s --cwd examples/browser start\"",
     "performance:startup:electron": "npm run -s electron rebuild && cd scripts/performance && node electron-performance.js --name 'Electron Frontend Startup' --folder electron --runs 10",
