Fix type in workflow
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,7 +58,7 @@ jobs:
     timeout-minutes: 60
 
     steps:
-      - name Clean
+      - name: Clean
         shell: bash
         run: |
           rm -rf ~/.node-gyp
