--- a/packages/ai-chat/package.json
+++ b/packages/ai-chat/package.json
@@ -8,6 +8,7 @@
     "@theia/core": "1.57.0",
     "@theia/filesystem": "1.57.0",
     "@theia/workspace": "1.57.0",
+    "@theia/monaco": "1.57.0",
     "minimatch": "^5.1.0",
     "tslib": "^2.6.2"
   },
