--- a/examples/browser-only/tsconfig.json
+++ b/examples/browser-only/tsconfig.json
@@ -66,6 +66,9 @@
       "path": "../../packages/getting-started"
     },
     {
+      "path": "../../packages/git"
+    },
+    {
       "path": "../../packages/keymaps"
     },
     {
