--- a/packages/ai-chat/tsconfig.json
+++ b/packages/ai-chat/tsconfig.json
@@ -19,7 +19,13 @@
       "path": "../core"
     },
     {
+      "path": "../editor"
+    },
+    {
       "path": "../filesystem"
+    },
+    {
+      "path": "../monaco"
     },
     {
       "path": "../workspace"
