--- a/examples/browser-only/package.json
+++ b/examples/browser-only/package.json
@@ -15,9 +15,7 @@
     }
   },
   "theiaPluginsDir": "plugins",
-  "theiaPlugins": {
-    "vscode.simple-browser": "https://open-vsx.org/api/vscode/simple-browser/1.88.1/file/vscode.simple-browser-1.88.1.vsix"
-  },
+  "theiaPlugins": {},
   "dependencies": {
     "@theia/ai-chat": "1.54.0",
     "@theia/ai-chat-ui": "1.54.0",
@@ -74,10 +72,10 @@
   "scripts": {
     "prepare:no-native": "lerna run prepare --scope=\"@theia/re-exports\" && lerna run generate-theia-re-exports --scope=\"@theia/core\"",
     "clean": "theia clean",
-    "build": "yarn -s compile && yarn deploy:plugin && yarn -s bundle",
+    "build": "yarn -s compile && yarn package:plugins && yarn -s bundle",
     "bundle": "theia build --mode development",
     "download:plugins": "theia download:plugins",
-    "deploy:plugin": "node ./prepare-plugins.js",
+    "package:plugins": "node ./prepare-plugins.js",
     "compile": "tsc -b",
     "start": "theia start",
     "start:debug": "yarn -s start --log-level=debug",
