refactor: move chat agents into separate ide package
Extracts chat agent implementations into an own package to separate the
core AI framework from concrete agents.

Repurposes the "ai-workspace-agent" package to "ai-ide-agents". Moves all
chat agents into this new package.

Resolves #14856

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -35,7 +35,7 @@
     "@theia/ai-openai": "1.58.0",
     "@theia/ai-scanoss": "1.58.0",
     "@theia/ai-terminal": "1.58.0",
-    "@theia/ai-workspace-agent": "1.58.0",
+    "@theia/ai-ide-agents": "1.58.0",
     "@theia/api-provider-sample": "1.58.0",
     "@theia/api-samples": "1.58.0",
     "@theia/bulk-edit": "1.58.0",
