--- a/packages/ai-ide-agents/package.json
+++ b/packages/ai-ide-agents/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@theia/ai-workspace-agent",
+  "name": "@theia/ai-ide-agents",
   "version": "1.58.0",
-  "description": "AI Workspace Agent Extension",
+  "description": "AI IDE Agents Extension",
   "license": "EPL-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0",
   "repository": {
     "type": "git",
