--- a/packages/ai-ide-agents/tsconfig.json
+++ b/packages/ai-ide-agents/tsconfig.json
@@ -25,6 +25,9 @@
       "path": "../filesystem"
     },
     {
+      "path": "../monaco"
+    },
+    {
       "path": "../navigator"
     },
     {
