--- a/packages/ai-ide/package.json
+++ b/packages/ai-ide/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@theia/ai-ide-agents",
+  "name": "@theia/ai-ide",
   "version": "1.58.0",
   "description": "AI IDE Agents Extension",
   "license": "EPL-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0",
