--- a/packages/ai-chat/package.json
+++ b/packages/ai-chat/package.json
@@ -7,9 +7,11 @@
     "@theia/ai-history": "1.58.0",
     "@theia/core": "1.58.0",
     "@theia/filesystem": "1.58.0",
+    "@theia/file-search": "1.58.0",
     "@theia/workspace": "1.58.0",
     "@theia/editor": "1.58.0",
     "@theia/monaco": "1.58.0",
+    "@theia/monaco-editor-core": "1.96.302",
     "minimatch": "^5.1.0",
     "tslib": "^2.6.2"
   },
