--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "lint:clean": "rimraf .eslintcache",
     "preinstall": "node-gyp install",
     "postinstall": "theia-patch && npm run -s compute-references && lerna run afterInstall",
-    "publish:latest": "lerna publish --exact --yes --no-push",
-    "publish:patch": "lerna publish --exact --yes --no-push --dist-tag patch",
+    "publish:latest": "lerna publish --exact --yes --no-push --force-publish",
+    "publish:patch": "lerna publish --exact --yes --no-push --force-publish --dist-tag patch",
     "publish:next": "lerna publish preminor --exact --canary --preid next --dist-tag next --no-git-reset --no-git-tag-version --no-push --yes && npm run -s publish:check",
     "publish:check": "node scripts/check-publish.js",
     "rebuild:clean": "rimraf .browser_modules",
